--- a/index.html
+++ b/index.html
@@ -8,20 +8,31 @@
 
   <link rel="stylesheet" href="css/layout.css" />
   <link rel="stylesheet" href="css/style.css">
-
 </head>
 <body>
+  <script src="main.js" type="module"></script>
   <div class="topbarNav">
-    <div id="title"><h1>Mini-Reddit</h1></div>
+    <div id="name"><h1>Mini-Reddit</h1></div>
     <div><img src="Assets/mini-redditLogo.webp" alt="" width="100px" height="100px"></div>
   </div>
-  <div class="secontNavbar">
-    <div>
-      <a href="home" id="home">Home</a>
-      <label for="search"></label>
-      <input type="text">
+
+  <div class="main">
+
+    <div id="lefside">
+      <div><input type="text" id="title" placeholder="Post Title"></div>
+      <div><textarea id="content" placeholder="Post Content"></textarea></div>
+      <div><button id="button">Create Post</button></div> 
     </div>
-  </div>
-  </div>
+    <div class="rightside">
+      <div id="viewPost">
+        <!-- Posts will be rendered here -->all these are posts!
+         </div>
+    </div>
+      </div>
+
+     
+
+     
+
 </body>
 </html>
