--- a/index.html
+++ b/index.html
@@ -19,13 +19,12 @@
   <div class="main">
 
     <div id="lefside">
-      <div><input type="text" id="title" placeholder="Post Title"></div>
-      <div><textarea id="content" placeholder="Post Content"></textarea></div>
+      <div><input type="text" id="title" placeholder="Post title"></div>
+      <div><textarea id="content" placeholder="Content"></textarea></div>
       <div><button id="button">Create Post</button></div> 
     </div>
     <div class="rightside">
       <div id="viewPost">
-        <!-- Posts will be rendered here -->all these are posts!
          </div>
     </div>
       </div>
